--- a/R_Backups/RCleaning_Garmin_Strava.Rmd
+++ b/R_Backups/RCleaning_Garmin_Strava.Rmd
@@ -11,16 +11,15 @@ output:
 
 ## Strava Data File
 
-First, I install the necessary packages I need to clean up the data.
-
+First, I install packages
 ```{r install packages}
 #install.packages("stringr")  - for manipulating string values
 #install.packages("tidyr")    - data cleansing
 #install.packages("plyr")     - for renaming columns
-#install.packages("lubridate")  - working with dates
 ```
 
-Next, I load in the CSV file created by and downloaded from **VeloViewer.com** containing my Strava data and check out the dataset.
+
+Next, I load in the CSV file containing the Strava data file created by and downloaded from **VeloViewer.com** and check out the dataset.
 
 ```{r strava data inspection, }
 strava <- read.csv("strava.csv")
@@ -30,7 +29,7 @@ head(strava)
 
 Okay, so there's 201 activities in here, as well as a lot of columns (85 of them), with a majority of these columns probably not being useful for my purposes right now. 
 
-Now I want to explore the Garmin data as well before moving on to removing those unneccessary columns.
+Now I want to explore the Garmin data as well before moving on the removing those unneccessary columns.
 
 ## Garmin Data Files
 
@@ -50,7 +49,7 @@ dim(garmin1)
 head(garmin6)
 ```
 
-Okay, good, same amount of runs and variables. Now it's time to load the rest of the Garmin data files in and combine them all into a single data frame to hold all of the Garmin data.
+Okay, good, same amount of runs and variables. Now it's time to load in the rest of the Garmin data files in and combine them all into a single data frame to hold all of the Garmin data.
 
 ```{r load rest of garmin data}
 garmin2 <- read.csv("garmin2.csv")
@@ -66,9 +65,9 @@ summary(garminFull)
 head(garminFull)
 ```
 
-It looks like there's 2 random NULL records in the 122 activities, located at the start of the data frame's records. These are throwing things off, and maybe they're due the way Garmin delivers the data when I download the activities from the Garmin Connect site. Or maybe *I* did something wrong. I don't know really.
+It looks like there's 2 random NULL records in the 122 activities, located at the start of the data frame's records. These are throwing things off, and maybe they're due the way Garmin delivers the data when I downloaded the activities from the Garmin Connect site. Or maybe *I* did something wrong. I don't know really.
 
-But we still have to remove these top 2 blank rows.
+But we still have to remove these top 2 blank rows
 
 ```{r clean garmin data}
 garminFull <- garminFull[-c(1,2),]
@@ -93,13 +92,13 @@ Now I want to split the DateTime field **When** into a specific **Date** and **S
 
 ```{r split strava dates and check dupes1}
 library(stringr)
-newStrava$Date <- str_split_fixed(newStrava$When, " ", 2)[,1] #get 1st part of split When field for Date
-newStrava$StartTime <- str_split_fixed(newStrava$When, " ", 2)[,2] #get 2nd part of split When field for StarTime
+newStrava$Date <- str_split_fixed(newStrava$When, " ", 2)[,1]
+newStrava$StartTime <- str_split_fixed(newStrava$When, " ", 2)[,2]
 
 str(newStrava)
 ```
 
-Okay, good, I've got 2 new character fields at the end there. Now onto the Garmin data cleaning. The date field, **Start** in Garmin is a bit different than in Strava, so some work needs to be done to get it into the same format, by first creating new fields from **Start**.
+Okay, good, I've got two 2 character fields at the end there. Now onto the Garmin data cleaning. The date field, **Start** in Garmin is a bit different than in Strava, so some work needs to be done to get it into the same format by first creating new fields from **Start**.
 
 ``` {r garmin data cleaning pt. 1}
 library(tidyr)
@@ -138,23 +137,21 @@ garminFull <- separate(garminFull, Date, into = vars4, sep = ", ", extra = "merg
 head(garminFull,2)
 ```
 
-Looks like there's extra whitespace to the right in the **Year** field, so let's remove it and then create a Date field from the 3 components: *Day, Month, and Year.*
+Looks like there's extra whitespace to the right in the **Year** field, so let's remove it and then create a Date field from its 3 components: Day, Month, and Year.
 
 ```{r remove whitespace and create date}
 garminFull$Year <- trimws(garminFull$Year)
 
 #Create Date field from 3 components: Day, Month, Year
-garminFull$Date <- format(as.Date(with(garminFull, paste(Year, monthNum, Day,sep="-")), 
-                                  "%Y-%m-%d"), "%m/%d/%Y")
+garminFull$Date <- format(as.Date(with(garminFull, paste(Year, monthNum, Day,sep="-")), "%Y-%m-%d"), "%m/%d/%Y")
 str(garminFull$Date)
 ```
 
-Okay, so we've got a **Date** field, although it's a character data type. But I'll fix that later. For now, I'll remove my unneccesary Garmin columns.
+Okay, so we've got a Date field, although it's a char data type. But I'll fix that later. For now, I'll remove my unneccesary Garmin columns.
 
 ```{r remove garmin cols}
 keepColsGarmin  <- NA
-keepColsGarmin <- c("DOW", "Month", "StartTime", "Time", "Distance", 
-                    "Elevation.Gain", "Avg.Speed.Avg.Pace.", "Avg.HR", 
+keepColsGarmin <- c("DOW", "Month", "StartTime", "Time", "Distance", "Elevation.Gain", "Avg.Speed.Avg.Pace.", "Avg.HR", 
                     "Max.HR", "Calories", "Date", "monthNum")
 newGarmin <- garminFull[keepColsGarmin]
 head(newGarmin,2)
@@ -181,26 +178,26 @@ head(newGarmin$Date)
 head(newStrava$Date)
 ```
 
-So, my runs from Strava seem to be starting back in January, which was *way* before my marathon training plan kicked in, and was mainly some basic runs in preperation for the Broad Street Run. The marathon training plan started right after the Tour De Shore bike ride I did on July 17, so I need to remove all runs prior to that 1st training plan run on July 19 (two days later since I needed one to recover from that ride!).
+So, my runs from Strava seem to be starting back in January which was *way* before my marathon training plan kicked in, and was mainly for the Broad Street Run. The marathon training plan started right after the Tour De Shore bike ride I did on July 17, so I need to remove all runs prior to that 1st training plan run on July 19 (two days later since I needed one to recover from that ride!)
 
 ```{r remove excess strava runs}
 newStrava <- newStrava[!newStrava$Date < "2016-07-18",]
 ```
 
-I need to double-check that the amount of rows in each data frame match up so that they can be combined correctly.
+I need to double-check that the amount of rows in each data frame match up so that they can be combined correctly
 
 ```{r check nrow pt 1}
 nrow(newGarmin)
 nrow(newStrava)
 ```
 
-So there's still 3 extra Garmin runs, and I need to find out what they are. I'll check a table of the run distances to see if anything sticks out.
+So there's still 3 extra Garmin runs, so I need to find out what they are. I'll check a table of the distance to see if anything sticks out.
 
 ```{r check garmin runs}
 table(newGarmin$Distance)  
 ```
 
-So there's 2 runs that are less than one-fifth of a mile? That is *definitely* not right. The run with **1.42** miles seems a bit off as well, but maybe I got lazy in my determination to end on a whole number of miles.
+So there's 2 runs that are less than one-fifth of a mile? That is *definitely* not right. The run with **1.42** miles seems but off as well maybe.
 
 ```{r check garmin runs2}
 newGarmin[newGarmin$Distance=="0.12",]  
@@ -243,7 +240,7 @@ newStrava <- newStrava[!newStrava$Activity.Id=="677460614",]
 newGarmin[newGarmin$Date == "2016-10-23",]
 ```
 
-While I'd love to run a 4:18 min/mile pace and finish 15 miles in just over an hour, that looks like another bike ride, but outdoors , since it has a value for elevation, unlike our spin rides above. So let's remove that one and then check the row counts again.
+While I'd love to run a 4:18 min/mile pace and finish 15 miles in an hour, that looks like another bike ride, but outdoors , since it has a value for elevation, unlike our spin rides above. So let's remove that one and then check the row counts again.
 
 ```{r remove last bike ride}
 newGarmin <- newGarmin[!(newGarmin$Date == "2016-10-23" & newGarmin$Elevation.Gain == 657),]
@@ -279,24 +276,20 @@ head(newFullData[,c("Date","date_garmin")])
 tail(newFullData[,c("Date","date_garmin")])
 ```
 
-Okay, now I can move on to keep the columns that I need for what I want to do with this data, and then order them in a more intuitive manner.
+Okay, now I can move to keep the columns that I need for what I want to do with this data, and then order them as I like.
 
 ```{r keep full dataset cols}
 newFullData <- rename(newFullData, c("Activity.Id"="ID"))
 
 keepColsFull  <- NA
-keepColsFull <- c("ID", "Gear", "Name", "Speed.mph", "Cad", "Date",
-                  "StartTime", "DOW", "Month",  "Time", "Distance",
-                  "Elevation.Gain", "Avg.Speed.Avg.Pace.", "Avg.HR",
-                  "Max.HR", "Calories", "monthNum")
+keepColsFull <- c("ID", "Gear", "Name", "Speed.mph", "Cad", "Date", "StartTime", "DOW", "Month",  "Time", "Distance", 
+                  "Elevation.Gain", "Avg.Speed.Avg.Pace.", "Avg.HR", "Max.HR", "Calories", "monthNum")
 newFullData <- newFullData[keepColsFull]
 
 #rearrange columns
-newFullData <- newFullData[, c("ID", "Name", "Gear", "Date",
-                               "Month", "monthNum", "DOW", "StartTime",
-                               "Distance", "Time", "Avg.Speed.Avg.Pace.", 
-                               "Speed.mph", "Cad",  "Elevation.Gain", 
-                               "Avg.HR", "Max.HR", "Calories")]
+newFullData <- newFullData[, c("ID", "Name", "Gear", "Date", "Month", "monthNum", "DOW", "StartTime",  "Distance", 
+                               "Time", "Avg.Speed.Avg.Pace.", "Speed.mph", "Cad",  "Elevation.Gain", "Avg.HR", "Max.HR", 
+                               "Calories")]
 ```
 
 Now I want to check the names of the runs I input into Strava when uploading them from my watch to make sure they're consistent, and I then can categorize them for an accurate analysis.
@@ -305,14 +298,14 @@ Now I want to check the names of the runs I input into Strava when uploading the
 table(newFullData$Name) 
 ```
 
-So there seems to be some inconsistencies (and a typo) for my *Middle Long Runs*, so now I need to correct them. I'll put them in a single category as **ML Run**.
+So there seems to be some inconsistencies (and a typo) for my *Middle Long Runs*, so now I need to correct them. I'll put them all al **ML Run**.
 
 ```{r fix ml runs}
 newFullData$Name[newFullData$Name == 'MIddle Long Run'] <- 'ML Run'
 newFullData$Name[newFullData$Name == 'Middle Long Run'] <- 'ML Run'
 ```
 
-There also seems to be 2 runs with the name "Morning Run", which was not the name of 1 of my types of runs in this plan, so let's investigate these runs.
+There also seems to be 2 runs with the name "Morning Run", which was not the name of 1 of my types of runs, so let's investigate these runs.
 
 ```{r check morning runs}
 newFullData[newFullData$Name == 'Morning Run',] 
@@ -325,7 +318,7 @@ newFullData$Name[newFullData$ID == 650512799] <- 'Recovery Run'
 newFullData$Name[newFullData$ID == 655096239] <- 'ML Run'
 ```
 
-Now, based off of the run names, I want to create 4 categories (inspired by the category choices on Strava) for **workouts, Long Runs, Recovery Runs,** and just plain ol' **Runs**, which consist of **General Aerobic (GA)** and **Middle Long (ML) runs**
+Now, based off of the run names, I want to create 4 categories (same as for Strava) for **workouts, Long Runs, Recovery Runs,** and just plain ol' **Runs**, which consist of **General Aerobic (GA)** and **Middle Long (ML) runs**
 
 ```{r new run categories}
 newFullData$RunType <- ifelse(grepl('LT',newFullData$Name),'Workout',
@@ -341,7 +334,7 @@ table(newFullData$RunType)
 
 Looks like I've got a lot of "plain" runs and a lot of recovery runs. Just goes to show that you don't need to kill yourself out there every time you run to race a marathon! 
 
-Now time to convert my heart rate variables **Avg.HR** and **Max.HR**, as well as my **Calories** and **Elevation.Gain** variables so that they're numerical and I can do math and statistics operations on them.
+Now time to convert my heart rate variables *Avg.HR* and *Max.HR*, as well as my *Calories* and *Elevation.Gain* variables so that they're numerical and I can do math on them.
 
 ```{r fix HR and cals}
 newFullData$Avg.HR <- as.numeric(as.character(newFullData$Avg.HR, stringsAsFactors = FALSE))
@@ -350,51 +343,15 @@ newFullData$Calories <- as.numeric(gsub(",","",newFullData$Calories))
 newFullData$Elevation.Gain <- as.numeric(as.character(newFullData$Elevation.Gain, stringsAsFactors = FALSE))
 ```
 
+
 Now time to fix my Cadence figures, since it seems like they are half of what they should be.
 
 ```{r fix cadence}
 newFullData$Cad <- newFullData$Cad*2
-str(newFullData)
+
 ```
 
-Alright, cool. I also see my time fields, **Avg.Speed.Avg.Pace** and **Time** are not in the correct format. I need to convert them to **POSIXct** in order to do some work with them. I need to convert my pace to the correct format via **as.POSIXct()**, since it's already pretty much in the correct numerical format.
-
-```{r fix avg pace}
-library(lubridate)
-
-#fix Average Pace
-newFullData$Avg.Speed.Avg.Pace. <- as.POSIXct(newFullData$Avg.Speed.Avg.Pace., format = '%M:%S')
-plot(newFullData$Date,newFullData$Avg.Speed.Avg.Pace.) #test plot
-newFullData$Avg.Pace <- newFullData$Avg.Speed.Avg.Pace.
-newFullData$Avg.Speed.Avg.Pace. <- NULL
-```
-
-Now, for **Time**, some values are missing the hour, some have the minutes in the hour place, etc. so I can fix this with a FOR loop in order to find the "incorrect" values and fix each one respectively.
-
-```{r fix total time}
-newFullData$Time <- as.character(newFullData$Time)
-
-for (i in 1:nrow(newFullData)) {
-  if (nchar(newFullData$Time[i]) == 4) {
-    newFullData$Time[i] <- paste("0:0", newFullData$Time[i], sep="")
-  } else if (nchar(newFullData$Time[i]) == 8) {
-    newFullData$Time[i] <- paste("0:",substring(newFullData$Time[i],1,5), sep="")
-  } else if (nchar(newFullData$Time[i]) == 5) {
-    newFullData$Time[i] <- paste("0:",newFullData$Time[i], sep="")
-  }  
-}
-newFullData$Time <- as.POSIXct(newFullData$Time, format = '%H:%M:%S')
-
-#test plot
-plot(newFullData$Date,newFullData$Time)
-```
-
-Great. Now the final thing to do is to make sure my **Month** variable is indeed ordered correctly with **factor()**.s
-
-```{r order month}
-newFullData$Month <- factor(newFullData$Month, ordered = TRUE, levels = c("Jul","Aug","Sep","Oct","Nov"))
-class(newFullData$Month)
-```
+Alright, cool.
 
 Now to save this dataset to a file to read into another script so I can do some analysis.
 
