--- a/R_Analysis_git.Rmd
+++ b/R_Analysis_git.Rmd
@@ -96,14 +96,13 @@ ggplot(data = runs, aes(Month, Cad)) +
   ylab("Cadence") + 
   guides(fill=FALSE) +
   ggtitle("Cadence per Month") 
-
 ```
 
 So, barring some outliers, I can see that my cadence tended to generally increases month over month, and ended up averagin between 170 and 180, barring those outliers. I would assume they were mainly recovery runs, as I was mainly concerned with keeping my heart rate down so I could actually recover on them than I was with making sure my cadence was optimal. I could investigate to see if this was due to having more speed workouts as the plan progressed, in which I would assume my cadence was typically higher), or could it have been due to improved form from an ever-increasing volume????
 
 Another metric would be my average heart rate during runs over the course of the training. Compared to the rise of my cadence, we would expect that my average heart rate would have decreased over time, as my fitness would have increased due to higher mileage and an increasing number of workouts.
 
-```{r HR by month boxplot}
+```{r HR by month boxplot, echo = FALSE}
 #avg. HR grouped by month
 
 ggplot(data = runs, aes(Month, Avg.HR)) + 
@@ -111,14 +110,50 @@ ggplot(data = runs, aes(Month, Avg.HR)) +
   geom_boxplot(aes(fill = Month), 
                outlier.colour = "black", alpha = 0.5) + #geom_jitter()
   xlab("Month") + 
-  ylab("Cadence") + 
-  ggtitle("Cadence per Month") 
+  ylab("Avg. Heart Rate") + 
+  ggtitle("Average Heart Rate per Month") 
 ```
 
 So we can see that my hear rate had generally decreased month over month. Now while I would hope it was due to increased fitness (and I still believe that to be the case, just by how I felt during my runs), the drops in temperature as we moved from summer to fall also may have played a part. Since it would have been cooler out, the body would not have been working as hard to cool itself down during my runs, so my heart rate would not have been as high. Maybe finding the historical temperature data and bringing it in could bring some insights into this question.
 
-#average heart rate per run over plan --> line
-```{r HR over time} 
+Now let's look at cadence and heart rate by Run Type as well for comparisons.
+
+```{r cadence by run type, echo = FALSE} 
+#avg. cadence grouped by month
+ggplot(data = runs, aes(RunType, Cad)) + 
+  geom_jitter(aes(colour = RunType)) +
+  geom_boxplot(aes(fill = RunType), 
+               outlier.colour = "black", alpha = 0.5) + #geom_jitter()
+  xlab("Run Type") + 
+  ylab("Cadence") + 
+  guides(fill=FALSE) +
+  coord_flip() + 
+  ggtitle("Cadence per Run Type") 
+```
+
+We can ignore the variability in the **Race** run type, since it's only on race. But we can still see that it was either my maximum cadence, or the second or third highest after those 2 quickest workout cadences. We can also see that my recovery runs had the least variability, and recovery runs as well as normal runs. I also expected my workouts to have the highest cadence, but it has the lowest median. I can only assume that this was due to recovery sections of interval runs, or warm-ups and cooldowns during tempo runs which were *much* slower and relaxed than even recovery runs. Now let's look at heart rate.
+
+```{r heart rate by run type, echo = FALSE}
+#avg. cadence grouped by month
+ggplot(data = runs, aes(RunType, Avg.HR)) + 
+  geom_jitter(aes(colour = RunType)) +
+  geom_boxplot(aes(fill = RunType), 
+               outlier.colour = "black", alpha = 0.5) +
+  xlab("Run Type") + 
+  ylab("Avg Heart Rate") + 
+  guides(fill=FALSE) +
+  ggtitle("Average Heart Rate per Run Type") 
+```
+
+As expected, my heart rate was lowest during recovery runs. We can also see that there were 2 runs were my heart rate monitor was off, since my average heart rate was around 70. Also, my average heart rate was not very variable for the other 3 types of runs, excluding the race. My Long runs also tended to have a lower average heart rate than my "normal" runs, which I personally did not expect. But this does a make a little sense, since I was supposed to run at a bit of a slower pace so that I could run longer. Also, I did expect my heart rate to be higher during workouts, since they were designed to to push my heart rate to the max during **V02 intervals**, and was supposed to be elevated during those "comfortably hard" **tempo runs**. I can also see that there was one single workout wherein it was higher than my average heart rate during the marathon.
+
+```{r max heart rate}
+runs[which.max(runs$Avg.HR),]
+```
+
+So we can see that my max heart rate was during my 10k Tune-up Race, which does not surprise me since it SUCKED.
+
+```{ r heart rate over time} 
 ggplot(data = runs, aes(x = Date, y = Avg.HR)) + 
   geom_line(aes(group=1)) +
   theme(axis.text.x = element_blank()) +
@@ -139,19 +174,4 @@ ggplot(data = runs, aes(x = Date, y = Avg.Pace)) +
   ylab("Average Heart Rate") + 
   ggtitle("Average Heart Rate Over Time") + 
   labs(caption="*Very slight general decrease, but not linear")
-```
-
-#cadence boxplot by run type
-```{r cadence by run type}
-ggplot(data = runs, aes(x=RunType, y=Cad, fill = RunType)) + 
-  geom_boxplot(alpha = 0.5) + 
-  geom_jitter(aes(colour = RunType)) +
-    #stat_summary(fun.y="median", geom="bar", alpha = 0.1) + 
-  expand_limits(y = 130) + 
-  xlab("Run Type") + 
-  ylab("Cadence") + 
-  coord_flip() + 
-  ggtitle("Cadence by Run Type") + 
-  labs(caption="*The actual marathon had the highest cadence, which makes sense. Workouts had widest variety - 
-       inspect more, recovery runs abit slower, but less variant, long runs second slowest")
 ```
